--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 	<div id="wrapper">
 				<h1 id="title">STRANGER THINGS TRIVIA GAME!</h1>
 			<div id="subWrapper">
-				<button id="start">Start</button>
+
+				<br><br><br><button id="start">Start</button>
 			</div> <!-- ============================ END OF SUBWRAPPER DIV ============================= --> 
 	</div> <!-- ==============================END OF WRAPPER DIV ========================================== --> 
 		
-
-
+<embed src="assets/javascript/st.mp3" autostart="true" loop="true"
+width="2" height="0">
+</embed>
+<noembed>
+<bgsound src="yourmusicfile.mid" loop="infinite">
+</noembed>
 		<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
