--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
 			</div> <!-- ============================ END OF SUBWRAPPER DIV ============================= --> 
 	</div> <!-- ==============================END OF WRAPPER DIV ========================================== --> 
 		
-<embed src="assets/javascript/st.mp3" autostart="true" loop="true"
+<embed id="music" src="assets/javascript/st.mp3" autostart="true" loop="true"
 width="2" height="0">
 </embed>
-<noembed>
-<bgsound src="yourmusicfile.mid" loop="infinite">
-</noembed>
 		<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
